# misc-verilog-cores

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
bench/: Makefile  axi_ddr3_lite_tb.v  encode_packet.v  fake_ulpi_phi.v  fake_ulpi_phy.v  fake_usb_host_ulpi.v  flow_check.v  prefetch_buffer_tb.v  startup_hsmode_tb.v  ulpi_bulk_axis_tb.v  ulpi_decoder_tb.v  ulpi_shell.v  usb_core_tb.v  usb_ulpi_wrapper_tb.v  vpi_usb_ulpi_tb.v
bench/arch/: gw2a_prim_sim.v
bench/spi/: Makefile  spi_slave_tb.gtkw  spi_slave_tb.v  spi_to_spi.v
bench/usb/: decode_packet.v  decodenator.v  encode_packet.v  encodenator.v  fake_usb_host_ulpi.v  protocolon.v  transient.v  ulpi_axis.v  usb_ulpi.v
driver/: Cargo.toml  Makefile  README.md  rustfmt.toml
driver/src/: axis_usb.rs  common.rs  lib.rs  main.rs  read_logger.rs  telemetry.rs
rtl/: Makefile
rtl/acdc/: acdc.v
rtl/arch/: generic_ddr3_phy.v  gw2a_ddr3_phy.v  gw2a_ddr3_phy_tb.v  gw2a_ddr_iob.v  gw2a_ddr_iob_tb.v  gw2a_rpll.v
rtl/axis/: Makefile  axi_defs.vh  axis_adapter.v  axis_chop.v  axis_skid.v  (+4 more)
synth/: Makefile
vpi/: Makefile  README.md  main.c  monitor.c  packet_tb.c  packet_tb.h  simulate.c  startup.c  stdreq.c  stdreq.h  tc_bulkin.c  tc_bulkin.h  tc_bulkout.c  tc_bulkout.h  tc_ddr3in.c  tc_ddr3in.h  tc_ddr3out.c  tc_ddr3out.h  tc_getconf.c  tc_getconf.h  tc_getdesc.c  tc_getdesc.h  tc_getstrs.c  tc_getstrs.h  tc_parity.c  tc_parity.h  tc_restarts.c  tc_restarts.h  tc_setaddr.c  tc_setaddr.h  tc_setconf.c  tc_setconf.h  tc_waitsof.c  tc_waitsof.h  testcase.c  testcase.h  ulpi.c  ulpi.h  ulpisim.c  ulpisim.h  (+3 more)
(+142 files in other folders)
