[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
rusb = "0.9.3"
simple_logger = "4.2.0"
spin_sleep = "1.1.1"
